samples/_failures_safe/1761192733_52af23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ecd2a5a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1ecd2a5a.c:167:30: error: expected ‘)’ at end of input
  167 |         } else if (peek(lexer
      |                        ~     ^
      |                              )
./samples/SAFE/__tmp_1ecd2a5a.c:167:9: error: expected declaration or statement at end of input
  167 |         } else if (peek(lexer
      |         ^
./samples/SAFE/__tmp_1ecd2a5a.c:167:9: error: expected declaration or statement at end of input
